# tonic

./: .gitignore  README.md  jvmc.cabal  tonic.cabal
examples/: Main.java  build.sh
examples/hello-world/: Invoke.bytecode  Main$F.bytecode  Main.bytecode  Main.java
examples/nongeneric-wordcount/: WordCount$IntSumReducer.bytecode  WordCount$TokenizerMapper.bytecode  WordCount.bytecode  WordCount.java
examples/ssa/: Main.bytecode  Main.java
examples/tail-calls/: fib.java  nested.java  oddeven-lambda-drop.java  oddeven.java
examples/wordcount/: WordCount$IntSumReducer.bytecode  WordCount$TokenizerMapper.bytecode  WordCount.java
src/: Etude.hs  Main.hs  Tonic.hs
src/JVM/: Bytecode.hs  Codegen.hs
src/Tonic/: Codegen.hs  Pretty.hs  Types.hs  Utils.hs
