name:          tonic
version:       0.1.0.0
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
category:      Development
build-type:    Simple
cabal-version: >= 1.10

executable tonic
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base           >= 4.7 && < 4.8
    , ansi-wl-pprint >= 0.6.7.1
    , bytestring     >= 0.10.4.1
    , containers     >= 0.5.6.3
    , mtl            >= 2.2.1
    , text           >= 1.2.0.4
